--- a/clase1/HolaMundo/app/src/main/res/values/strings.xml
+++ b/clase1/HolaMundo/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">HolaMundo</string>
-    <string name="action_settings">Settings</string>
+    <string name="lbl_ingrese_nombre">Ingrese su Nombre</string>
+    <string name="btn_ingrese_nombre">Comprobar su nombre</string>
+    <string name="lbl_telefono">Escriba su N° telefónico</string>
 </resources>
