--- a/clase2/03_Navegacion_tabs/app/src/main/res/values/strings.xml
+++ b/clase2/03_Navegacion_tabs/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">03_Navegacion_tabs</string>
+    <string name="app_name">Tinder</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
